--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "react-native-svg": "^6.2.1||>=7.0.3"
     },
     "devDependencies": {
+        "@babel/compat-data": "^7.25.2",
         "@react-native-community/bob": "^0.10.0",
         "@storybook/addon-actions": "^3.2.14",
         "@storybook/addon-knobs": "^3.2.14",
